[tool.poetry]
name = "cognitrix"
version = "0.2.5"
description = "Package for creating AI Agents using llms"
authors = ["theonlyamos <theonlyamos@gmail.com>"]
license = "Apache2"
readme = "README.md"
homepage = "https://github.com/theonlyamos/cognitrix"
repository = "https://github.com/theonlyamos/cognitrix"
keywords = ["cognitrix", "ai", "agents", "ai agents", "ai-agents", "llms", "autonomous agents"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/theonlyamos/cognitrix/issues"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.2"
aiohttp = "^3.9.3"
cohere = "^5.5.6"
together = "^0.2.11"
clarifai = "^10.1.0"
openai = "^1.12.0"
groq = "^0.4.1"
google-generativeai = "^0.4.0"
uuid = "^1.30"
pillow = "^10.2.0"
pyautogui = "^0.9.54"
anthropic = "^0.17.0"
aiofiles = "^23.2.1"
xmltodict = "^0.13.0"
deepgram-sdk = "==3.*"
beautifulsoup4 = "^4.12.3"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
ollama = "^0.2.0"
flask = "^3.0.3"
uvicorn = "^0.30.1"
tavily-python = "^0.3.3"
rich = "^13.7.1"
sse-starlette = "^2.1.2"
wikipedia = "^1.4.0"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.112.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cognitrix = "cognitrix.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]