[tool.poetry]
name = "cognitrix"
version = "0.2.5"
description = "Package for creating AI Agents using llms"
authors = ["theonlyamos <theonlyamos@gmail.com>"]
license = "Apache2"
readme = "README.md"
homepage = "https://github.com/theonlyamos/cognitrix"
repository = "https://github.com/theonlyamos/cognitrix"
keywords = ["cognitrix", "ai", "agents", "ai agents", "ai-agents", "llms", "autonomous agents"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/theonlyamos/cognitrix/issues"

[tool.poetry.dependencies]
python = "^3.11"

# Core
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.2"

# LLM Providers (OpenAI-compatible SDK for all providers)
openai = "^1.14.0"

# Vector Memory & Embeddings
chromadb = "^1.5.0"
sentence-transformers = "^5.2.0"
numpy = "^2.0.0"

# Web Framework
fastapi = "^0.112.0"
uvicorn = "^0.30.1"
flask = "^3.0.3"
sse-starlette = "^2.1.2"
python-multipart = "^0.0.9"

# Tools & Automation
pillow = "^10.2.0"
pyautogui = "^0.9.54"
beautifulsoup4 = "^4.12.3"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
wikipedia = "^1.4.0"
tavily-python = "^0.3.3"
deepgram-sdk = "==3.*"
xmltodict = "^0.13.0"

# Database & Auth
odbms = "0.4.5"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.3.0"

# Utilities
rich = "^13.7.1"
celery = {extras = ["redis"], version = "^5.4.0"}

# MCP (Model Context Protocol)
mcp = {extras = ["cli"], version = "^1.9.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cognitrix = "cognitrix.cli.main:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "W", "F", "I", "B", "UP"]
fix = true
show-fixes = true
ignore = ["E501", "B008", "B904"]
